# dynamodb-facade

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  EXAMPLES.md  README.md  rust_out  test_dispatch
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  release.yml
.hooks/: pre-commit
nix/: flake.nix
scripts/: install-hooks.sh
src/: error.rs  lib.rs  macros.rs  test_fixtures.rs  utils.rs
src/expressions/: builders.rs  conditions.rs  key_conditions.rs  mod.rs  projections.rs  updates.rs  utils.rs
src/item/: key.rs  key_id.rs  mod.rs
src/operations/: batch.rs  delete.rs  get.rs  mod.rs  pagination.rs  put.rs  query.rs  scan.rs  transactions.rs  type_state.rs  update.rs
src/schema/: attribute_list.rs  attribute_ref.rs  attributes.rs  markers.rs  mod.rs
src/values/: impls.rs  mod.rs  typed.rs
tests/: macros.rs  operations.rs  try_build.rs
tests/common/: mod.rs
tests/macros/: attribute_definitions.rs  dynamodb_item.rs  index_definitions.rs  key_schema.rs  table_definitions.rs
tests/operations/: batch_and_pagination.rs  crud_lifecycle.rs  query_and_scan.rs  transactions.rs
tests/try_build/fail/: double_condition_delete.rs  double_condition_delete.stderr  double_condition_put.rs  double_condition_put.stderr  double_condition_update.rs  double_condition_update.stderr  double_filter_query.rs  double_filter_query.stderr  double_filter_scan.rs  double_filter_scan.stderr  double_projection_get.rs  double_projection_get.stderr  double_projection_query.rs  double_projection_query.stderr  double_projection_scan.rs  double_projection_scan.stderr  dynamodb_item_missing_sk.rs  dynamodb_item_missing_sk.stderr  dynamodb_item_multiple_sk.rs  dynamodb_item_multiple_sk.stderr  dynamodb_item_wrong_type.rs  dynamodb_item_wrong_type.stderr  get_sk_on_simple_key.rs  get_sk_on_simple_key.stderr  query_sk_on_simple_key.rs  (+1 more)
(+4 files in other folders)
